--- a/system/www/visualisation/dataquery.org
+++ b/system/www/visualisation/dataquery.org
@@ -125,9 +125,52 @@ WHERE {
   ?target dcterms:isPartOf ?targetdatamodel .
   ?targetdatamodel rdfs:label ?targetdatamodellabel .
 }
-
 #+end_src
 
 #+RESULTS: dcat_mappings
 [[file:all-dcat.links]]
+
+#+NAME: sdmxdcatap_mappings
+#+begin_src roqet :endpoint http://vocabs.tenforce.com/sparql :exports both :file all-sdmx2dcatap.links
+PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
+PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
+PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
+prefix vdm: <http://vocabs.tenforce.com/def#>
+prefix coreclass: <http://vocabs.tenforce.com/vdm/id/cv/class/>
+
+SELECT DISTINCT ?datamodel ?datamodellab 
+                ?coreclass ?coreclasslabel 
+                ?coreproperty ?corepropertylabel 
+                ?matchingprop ?matchingprop as ?label
+                ?targetdatamodel ?targetdatamodellabel
+		            ?target ?targetLabel 
+WHERE {
+  ?datamodel rdf:type vdm:DataModel .
+  ?datamodel rdfs:label ?datamodellab .
+  FILTER(STR(?datamodel)="http://vocabs.tenforce.com/vdm/id/cv/0a7380a6c87798dc2d0db45ef1814630")
+
+  ?coreclass dcterms:isPartOf ?datamodel .
+  ?coreclass rdfs:label ?coreclasslabel .
+
+  ?coreproperty a vdm:Property .
+  ?coreproperty adms:includedAsset ?coreclass .
+  ?coreproperty rdfs:label ?corepropertylabel .
+
+  { { ?coreproperty skos:exactMatch ?target}
+   union
+  { ?coreproperty skos:closeMatch ?target }
+   union
+  { ?coreproperty skos:broaderMatch ?target }
+   union
+  { ?coreproperty skos:narrowerMatch ?target } }
+  ?coreproperty ?matchingprop ?target .
+  ?target rdfs:label ?targetLabel .
+
+  ?target dcterms:isPartOf ?targetdatamodel .
+  ?targetdatamodel rdfs:label ?targetdatamodellabel .
+}
+#+end_src
+
+#+RESULTS: sdmxdcatap_mappings
+[[file:all-sdmx2dcatap.links]]
 
